# LoginChallenge2022

./: Dockerfile  Makefile  README.md  requirements.txt
web/: app.py  pyproject.toml
web/static/: style.css
web/templates/: cookie-jar.html  hacked.html  home.html  hungry.html  layout.html
