[tool.poetry]
name = "loginchallenge2022"
version = "0.1.0"
description = ""
authors = ["Atri Hegde <iamatrihegde@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
Flask = "^2.3.3"
Flask-JWT-Extended = "^4.5.2"
Flask-Bootstrap = "^3.3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
